--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel="preload" href="/fonts/Gotham-Book.otf" as="font" type="font/otf" crossorigin>
+    <link rel="preload" href="/fonts/Gotham-Bold.otf" as="font" type="font/otf" crossorigin>
+    <title>GUM Detail Aid</title>
   </head>
   <body>
     <div id="root"></div>
