finished first part of tech toothbrush module, started the second

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preload" href="/fonts/Gotham-Book.otf" as="font" type="font/otf" crossorigin>
     <link rel="preload" href="/fonts/Gotham-Bold.otf" as="font" type="font/otf" crossorigin>
+
+    <link rel="preload" href="/assets/HOME-bg.webp" as="image" fetchpriority="high">
+
+    <link rel="preload" href="/assets/btc/col1-row2.svg" as="image" type="image/svg+xml" fetchpriority="high">
+    <link rel="preload" href="/assets/btc/column2-flossers.svg" as="image" type="image/svg+xml">
+    <link rel="preload" href="/assets/btc/PatientNeeds.png" as="image" type="image/png">
+    <link rel="preload" href="/assets/btc/Technology.png" as="image" type="image/png">
+    <link rel="preload" href="/assets/btc/Portfolio.png" as="image" type="image/png">
+
+    <link rel="preload" href="/assets/toothbrush/toothbrush.webp" as="image">
+    <link rel="preload" href="/assets/btc/col1-row2.svg" as="image">
+    <link rel="preload" href="/assets/toothbrush/PN.png" as="image">
+    <link rel="preload" href="/assets/toothbrush/Tech.png" as="image">
+    <link rel="preload" href="/assets/toothbrush/Port.png" as="image">
+    
     <title>GUM Detail Aid</title>
   </head>
   <body>
